# sol-dao

./: Anchor.toml  README.md
programs/sol-dev/: Cargo.toml
programs/sol-dev/src/: lib.rs
programs/sol-dev/src/custom_error/: error_code.rs
programs/sol-dev/src/instructions/: config_dao.rs  create_proposal.rs  init_dao.rs  init_member.rs  mod.rs  remove_proposal.rs
programs/sol-dev/src/state/: dao.rs  member.rs  mod.rs  proposal.rs
programs/sol-dev/src/utils/: utils.rs
tests/: sol-dev.ts
