[package]
name = "sol-dev"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_dev"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.22.0", features = ["init-if-needed"] }
anchor-spl = "0.22.0"
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }